# discsync-embeddings

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: build.yml  test.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  gateway.yaml  migrator-job.yaml  route.yaml  secrets.yaml  service.yaml
migrations/: env.py
migrations/versions/: 2b1c3a4f7d0a_add_formatted_text_to_message_embeddings.py  5ebd7bdda103_initial_migration.py
src/discsync_embeddings/: main.py
src/discsync_embeddings/app/routers/: __init__.py  health.py
src/discsync_embeddings/core/: db.py  embeddings.py  message.py  qdrant.py  sqlmodels.py
src/discsync_embeddings/helpers/: logging.py
